clusters/my-cluster/picture-v2/picture-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picture
spec:
  template:
    spec:
      containers:
      - name: picture
        image: gcr.io/picture-generator/picture-service:1.0.6 
        ports:
        - containerPort: 3334
