clusters/my-cluster/picture-v2/picture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picture-v2
  labels:
    app: picture-v2
spec:
  selector:
    app: picture-v2
