clusters/my-cluster/picture-v2/picture-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: picture
  namespace: default
spec:
  hosts:
  - "picture.de"
  gateways:
  - istio-ingress/picture-gateway
  http:
  - match:
    - uri:
        prefix: /api/picture
    route:
    - destination:
        port:
          number: 3334
        host: picture
